--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 # -------- Data Source --------
 # database connection configuration
 
-spring.datasource.url = jdbc:mysql://localhost:3306/game
+#spring.datasource.url = jdbc:postgresql://localhost:5432/game
+spring.datasource.url = ${JDBC_DATABASE_URL}
 
-spring.datasource.username = root
-spring.datasource.password = nbuser
+spring.datasource.username = ulcnissrnibmjm
+spring.datasource.password = IQwfHUfOHGFw5yZEHFb4aPp8yD
 
 # Keep the connection alive if idle for a long time (needed in production)
 spring.datasource.testWhileIdle = true
@@ -24,4 +25,4 @@ spring.jpa.hibernate.ddl-auto = update
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 
 # Allows Hibernate to generate SQL optimized for a particular DBMS
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
